Define starting_location so engine knows which room is the first one

--- a/crystal_lake_data/locations.yml
+++ b/crystal_lake_data/locations.yml
@@ -1,4 +1,5 @@
 -
+  starting_location: true
   handle: lake
   desc: A beautiful lake surrounded by trees.
   info: A trail runs to the north from here.
