--- a/crystal_lake_data/messages.yml
+++ b/crystal_lake_data/messages.yml
@@ -1,2 +1,2 @@
 splash: Welcome to Crystal Lake!
-help: Type 'look' for more information. You can 'go <direction>' to move around.
+help: Type 'look' for more information. You can 'go <direction>' to move around. Type 'exit' or 'quit' to stop the game.
