Added a script to make it easy to start playing the game.
Changed the splash message.

Update the engine script to handle load paths a little better.

--- a/data/epic_adventure/messages.yml
+++ b/data/epic_adventure/messages.yml
@@ -1,2 +1,2 @@
-splash: Welcome to Crystal Lake!
+splash: An Epic Adventure awaits you.
 help: Type 'look' for more information. You can 'go <direction>' to move around. Type 'exit' or 'quit' to stop the game.
