Added a little extra information to make it easy to get started.

--- a/data/epic_adventure/messages.yml
+++ b/data/epic_adventure/messages.yml
@@ -1,2 +1,2 @@
-splash: An Epic Adventure awaits you.
+splash: An Epic Adventure awaits you. Type 'help' for instructions.
 help: Type 'look' for more information. You can 'go <direction>' to move around. Type 'exit' or 'quit' to stop the game.
